# Urcan

./: .gitignore  BasicConfiguration.hh  CMakeLists.txt  VDeleter.hpp  main.cpp
ClassUtils/: Chrono.cpp  Chrono.hh  Color.cpp  Color.hpp  FastRand.cpp  FastRand.hpp  ScopeLock.cpp  ScopeLock.hh  Utils.cpp  Utils.h
Config/: MapGeneratorConfig.cpp  MapGeneratorConfig.hh  map_generator.json
Patterns/: Singleton.hpp
Terrain/: Collision.cpp  Collision.hpp  FallingSand.cpp  FallingSand.hh  IMapGenerator.hh  PerlinNoise.cpp  PerlinNoise.hh
TestApplication/: UrcanApp.cpp  UrcanApp.hh
VulkanCore/: BasicConfiguration.hh  BasicConfiguration.hpp  Camera.cpp  Camera.hh  HeightToVertexConvertor.cpp  HeightToVertexConvertor.hh  UrcanInstance.cpp  UrcanInstance.hh  VCallback.cpp  VCallback.hh  VDeleter.hpp
VulkanCore/Buffers/: UniformBufferObject.cpp  UniformBufferObject.hh  Vertex.cpp  Vertex.hh
VulkanCore/GLFWCore/: GLFWCore.cpp  GLFWCore.hh
VulkanCore/VertexComputation/: Vertex.hh
lib/1.0.42.1/Bin32/: VkLayer_api_dump.json  VkLayer_monitor.json
lib/1.0.42.1/Demos/: cube.c  cube.vcxproj  cubepp.vcxproj  vulkaninfo.vcxproj
lib/1.0.42.1/Documentation/: LoaderAndLayerInterface.html  apispec.html  layers.html  vulkan_samples.html
lib/1.0.42.1/Documentation/Vulkan Documentation/: API Specification.lnk  FAQ.lnk  Getting Started.lnk  Loader And Layer Interface.lnk  Release Notes.lnk  SDK Layers.lnk  SPIRV Toolchain.lnk  Samples Index.lnk  Trace Tools.lnk  Tutorial.lnk  Validation Layer Details.lnk  Via.lnk  Vulkan Samples.lnk  Vulkan Specification.lnk  Vulkan Tools Framework.lnk
lib/1.0.42.1/Lib/: VKstatic.1.lib  VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_swapchain.lib  VkLayer_threading.lib  VkLayer_utils.lib
lib/1.0.42.1/Lib32/: VKstatic.1.lib  VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_swapchain.lib  VkLayer_threading.lib  VkLayer_unique_objects.lib  VkLayer_utils.lib  vulkan-1.lib
lib/1.0.42.1/Samples/: Tutorial.lnk
lib/1.0.42.1/Source/layers/: api_dump.cpp  api_dump_text.h  parameter_validation.h  thread_check.h  unique_objects_wrappers.h  vk_enum_string_helper.h  vk_safe_struct.cpp  vk_safe_struct.h  (+2 more)
lib/1.0.46.0/Demos/: cube.vcxproj
lib/1.0.46.0/Documentation/: LoaderAndLayerInterface.html  apispec.html  getting_started.html  layers.html  trace_tools.html
lib/1.0.46.0/Lib/: VKstatic.1.lib  VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_swapchain.lib  VkLayer_threading.lib  VkLayer_utils.lib
lib/1.0.46.0/Lib32/: VKstatic.1.lib  VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_swapchain.lib  VkLayer_threading.lib  VkLayer_unique_objects.lib  VkLayer_utils.lib
lib/1.0.46.0/Samples/: Tutorial.lnk
shaders/: compile.bat
(+78 files in other folders)
